<resources>
    <string name="app_name">CSE489_2023_3_2019_2_60_032_Class Summary</string>
    <string name="add_new">Add New</string>
    <string name="back">Back</string>
    <string name="class_lectures">Class Lectures</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="user_id">User ID:</string>
    <string name="password">Password:</string>
    <string name="confirm_pass">Confirm Pass:</string>
    <string name="remember_password">Remember Password</string>
    <string name="remember_user_id">Remember User ID</string>
    <string name="exit">Exit</string>
    <string name="go">Go</string>
    <string name="login">Login</string>
    <string name="Enter_email_address">Enter email address</string>
    <string name="Enter_your_name">Enter your name</string>
    <string name="welcome_user" />
</resources>