<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassLecturesActivity"
    android:orientation="vertical"
    android:background="#fff">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/class_lectures"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="#000000"
        android:textColor="#FFFF8011"/>
    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="#000">
        <Button
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back"
            android:backgroundTint="#FFBB02"
            android:textColor="@color/black"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btnAddNew"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#FFBB02"
            android:text="@string/add_new"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="TextSizeCheck,VisualLintButtonSize"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>